--- a/notebooks/text_analysis.ipynb
+++ b/notebooks/text_analysis.ipynb
@@ -98,6 +98,7 @@
        "      <th>stock</th>\n",
        "      <th>cleaned_headline</th>\n",
        "      <th>sentiment</th>\n",
+       "      <th>polarity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -110,6 +111,7 @@
        "      <td>A</td>\n",
        "      <td>stocks hit 52 week highs friday</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -120,6 +122,7 @@
        "      <td>A</td>\n",
        "      <td>stocks hit 52 week highs wednesday</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -130,6 +133,7 @@
        "      <td>A</td>\n",
        "      <td>71 biggest movers friday</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -140,6 +144,7 @@
        "      <td>A</td>\n",
        "      <td>46 stocks moving friday mid day session</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -150,9 +155,11 @@
        "      <td>A</td>\n",
        "      <td>b securities maintains neutral agilent technol...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -170,6 +177,7 @@
        "      <td>ZX</td>\n",
        "      <td>top narrow based indexes august 29</td>\n",
        "      <td>Positive</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1407324</th>\n",
@@ -180,6 +188,7 @@
        "      <td>ZX</td>\n",
        "      <td>recap wednesday top percentage gainers losers</td>\n",
        "      <td>Positive</td>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1407325</th>\n",
@@ -190,6 +199,7 @@
        "      <td>ZX</td>\n",
        "      <td>update oppenheimer color china zenix auto init...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1407326</th>\n",
@@ -200,6 +210,7 @@
        "      <td>ZX</td>\n",
        "      <td>oppenheimer initiates china zenix outperform 8 pt</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1407327</th>\n",
@@ -210,10 +221,11 @@
        "      <td>ZX</td>\n",
        "      <td>china zenix auto international opens trading 6...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1407328 rows × 7 columns</p>\n",
+       "<p>1407328 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -256,20 +268,20 @@
        "1407326        2011-06-21 00:00:00    ZX   \n",
        "1407327        2011-05-12 00:00:00    ZX   \n",
        "\n",
-       "                                          cleaned_headline sentiment  \n",
-       "0                          stocks hit 52 week highs friday   Neutral  \n",
-       "1                       stocks hit 52 week highs wednesday   Neutral  \n",
-       "2                                 71 biggest movers friday   Neutral  \n",
-       "3                  46 stocks moving friday mid day session   Neutral  \n",
-       "4        b securities maintains neutral agilent technol...   Neutral  \n",
-       "...                                                    ...       ...  \n",
-       "1407323                 top narrow based indexes august 29  Positive  \n",
-       "1407324      recap wednesday top percentage gainers losers  Positive  \n",
-       "1407325  update oppenheimer color china zenix auto init...   Neutral  \n",
-       "1407326  oppenheimer initiates china zenix outperform 8 pt   Neutral  \n",
-       "1407327  china zenix auto international opens trading 6...   Neutral  \n",
+       "                                          cleaned_headline sentiment  polarity  \n",
+       "0                          stocks hit 52 week highs friday   Neutral      0.00  \n",
+       "1                       stocks hit 52 week highs wednesday   Neutral      0.00  \n",
+       "2                                 71 biggest movers friday   Neutral      0.00  \n",
+       "3                  46 stocks moving friday mid day session   Neutral      0.00  \n",
+       "4        b securities maintains neutral agilent technol...   Neutral      0.00  \n",
+       "...                                                    ...       ...       ...  \n",
+       "1407323                 top narrow based indexes august 29  Positive      0.15  \n",
+       "1407324      recap wednesday top percentage gainers losers  Positive      0.15  \n",
+       "1407325  update oppenheimer color china zenix auto init...   Neutral      0.00  \n",
+       "1407326  oppenheimer initiates china zenix outperform 8 pt   Neutral      0.00  \n",
+       "1407327  china zenix auto international opens trading 6...   Neutral      0.00  \n",
        "\n",
-       "[1407328 rows x 7 columns]"
+       "[1407328 rows x 8 columns]"
       ]
      },
      "execution_count": 6,
