--- a/notebooks/text_analysis.ipynb
+++ b/notebooks/text_analysis.ipynb
@@ -20,9 +20,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\marta\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
+      "[nltk_data] Error loading stopwords: Remote end closed connection\n",
+      "[nltk_data]     without response\n"
      ]
     }
    ],
@@ -56,6 +55,26 @@
    "outputs": [],
    "source": [
     "df = result.remove_unname()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A', 'AA', 'AAC', ..., 'ZU', 'ZUMZ', 'ZX'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['stock'].unique()"
    ]
   },
   {
