--- a/notebooks/text_analysis.ipynb
+++ b/notebooks/text_analysis.ipynb
@@ -20,8 +20,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Error loading stopwords: Remote end closed connection\n",
-      "[nltk_data]     without response\n"
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\marta\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
        "array(['A', 'AA', 'AAC', ..., 'ZU', 'ZUMZ', 'ZX'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +304,7 @@
        "[1407328 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +428,7 @@
        "9        vs   65826.306491"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +536,7 @@
        "9  (initiates, coverage)  28993"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +653,7 @@
        "9  initiates coverage  28993"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -738,6 +739,7 @@
        "      <th>stock</th>\n",
        "      <th>cleaned_headline</th>\n",
        "      <th>sentiment</th>\n",
+       "      <th>polarity</th>\n",
        "      <th>domain</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -751,6 +753,7 @@
        "      <td>A</td>\n",
        "      <td>cfra maintains hold agilent technologies lower...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -762,6 +765,7 @@
        "      <td>A</td>\n",
        "      <td>ubs maintains neutral agilent technologies rai...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -773,6 +777,7 @@
        "      <td>A</td>\n",
        "      <td>wells fargo maintains overweight agilent techn...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -784,6 +789,7 @@
        "      <td>A</td>\n",
        "      <td>svb leerink maintains outperform agilent techn...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -795,10 +801,12 @@
        "      <td>A</td>\n",
        "      <td>ubs maintains neutral agilent technologies low...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -817,6 +825,7 @@
        "      <td>ZNGA</td>\n",
        "      <td>based options pricing 5 companies implied move...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -828,6 +837,7 @@
        "      <td>ZNGA</td>\n",
        "      <td>znga implied move 3 50 straddle price 0 50 14 ...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -839,6 +849,7 @@
        "      <td>ZOES</td>\n",
        "      <td>zoe kitchen shares indicated 1 premarket light...</td>\n",
        "      <td>Positive</td>\n",
+       "      <td>0.268182</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -850,6 +861,7 @@
        "      <td>ZUMZ</td>\n",
        "      <td>zumiez sees fy20 eps 0 01 0 07 vs 0 08 est sal...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -861,11 +873,12 @@
        "      <td>ZUMZ</td>\n",
        "      <td>zumiez q4 eps 1 48 beats 1 36 estimate sales 3...</td>\n",
        "      <td>Neutral</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>benzinga.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8088 rows × 8 columns</p>\n",
+       "<p>8088 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -921,23 +934,23 @@
        "1406325  zumiez sees fy20 eps 0 01 0 07 vs 0 08 est sal...   Neutral   \n",
        "1406326  zumiez q4 eps 1 48 beats 1 36 estimate sales 3...   Neutral   \n",
        "\n",
-       "               domain  \n",
-       "5        benzinga.com  \n",
-       "6        benzinga.com  \n",
-       "8        benzinga.com  \n",
-       "11       benzinga.com  \n",
-       "22       benzinga.com  \n",
-       "...               ...  \n",
-       "1404049  benzinga.com  \n",
-       "1404050  benzinga.com  \n",
-       "1404780  benzinga.com  \n",
-       "1406325  benzinga.com  \n",
-       "1406326  benzinga.com  \n",
+       "         polarity        domain  \n",
+       "5        0.000000  benzinga.com  \n",
+       "6        0.000000  benzinga.com  \n",
+       "8        0.000000  benzinga.com  \n",
+       "11       0.000000  benzinga.com  \n",
+       "22       0.000000  benzinga.com  \n",
+       "...           ...           ...  \n",
+       "1404049  0.000000  benzinga.com  \n",
+       "1404050  0.000000  benzinga.com  \n",
+       "1404780  0.268182  benzinga.com  \n",
+       "1406325  0.000000  benzinga.com  \n",
+       "1406326  0.000000  benzinga.com  \n",
        "\n",
-       "[8088 rows x 8 columns]"
+       "[8088 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1053,7 @@
        "7         stockmetrix.net      1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1075,6 +1088,20 @@
    "source": [
     "result.plot_email_have_publisher()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
