--- a/notebooks/text_analysis.ipynb
+++ b/notebooks/text_analysis.ipynb
@@ -4,11 +4,487 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mThe kernel died. Error: ... View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sys \n",
-    "sys.path.insert(0, '/10 A KAI 2/week 1/Stock_Price_Analysis/')"
+    "import yfinance as yf\n",
+    "sys.path.insert(0, '/10 A KAI 2/week 1/Stock_Price_Analysis/')\n",
+    "## new stock price downloaded "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mThe kernel died. Error: ... View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Define the stock symbols\n",
+    "symbols = ['AAPL', 'AMZN', 'GOOG', 'META', 'MSFT', 'NVDA', 'TSLA']\n",
+    "# Define the time frame\n",
+    "start_date = \"1980-01-01\"\n",
+    "end_date = \"2024-01-01\"\n",
+    "# Download the data\n",
+    "data = yf.download(symbols, start=start_date, end=end_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <th colspan=\"7\" halign=\"left\">Close</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">High</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Open</th>\n",
+       "      <th colspan=\"7\" halign=\"left\">Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AMZN</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AMZN</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>TSLA</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AMZN</th>\n",
+       "      <th>GOOG</th>\n",
+       "      <th>META</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>NVDA</th>\n",
+       "      <th>TSLA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-12-12</th>\n",
+       "      <td>0.098834</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.099264</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>469033600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-15</th>\n",
+       "      <td>0.093678</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.094108</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>175884800</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-16</th>\n",
+       "      <td>0.086802</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.087232</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105728000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-17</th>\n",
+       "      <td>0.088951</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.089381</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>86441600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-18</th>\n",
+       "      <td>0.091530</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.091959</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73449600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-22</th>\n",
+       "      <td>192.656189</td>\n",
+       "      <td>153.419998</td>\n",
+       "      <td>142.209045</td>\n",
+       "      <td>352.045197</td>\n",
+       "      <td>371.799683</td>\n",
+       "      <td>48.816162</td>\n",
+       "      <td>252.539993</td>\n",
+       "      <td>194.457363</td>\n",
+       "      <td>154.350006</td>\n",
+       "      <td>142.737147</td>\n",
+       "      <td>...</td>\n",
+       "      <td>370.906369</td>\n",
+       "      <td>49.181057</td>\n",
+       "      <td>256.760010</td>\n",
+       "      <td>37122800</td>\n",
+       "      <td>29480100.0</td>\n",
+       "      <td>18494700.0</td>\n",
+       "      <td>11764200.0</td>\n",
+       "      <td>17091100.0</td>\n",
+       "      <td>252507000.0</td>\n",
+       "      <td>93249800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-26</th>\n",
+       "      <td>192.108841</td>\n",
+       "      <td>153.410004</td>\n",
+       "      <td>142.308670</td>\n",
+       "      <td>353.479736</td>\n",
+       "      <td>371.879120</td>\n",
+       "      <td>49.265030</td>\n",
+       "      <td>256.609985</td>\n",
+       "      <td>192.944742</td>\n",
+       "      <td>153.979996</td>\n",
+       "      <td>143.429642</td>\n",
+       "      <td>...</td>\n",
+       "      <td>372.216593</td>\n",
+       "      <td>48.954117</td>\n",
+       "      <td>254.490005</td>\n",
+       "      <td>28919300</td>\n",
+       "      <td>25067200.0</td>\n",
+       "      <td>11170100.0</td>\n",
+       "      <td>9898600.0</td>\n",
+       "      <td>12673100.0</td>\n",
+       "      <td>244200000.0</td>\n",
+       "      <td>86892400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-27</th>\n",
+       "      <td>192.208359</td>\n",
+       "      <td>153.339996</td>\n",
+       "      <td>140.933624</td>\n",
+       "      <td>356.468323</td>\n",
+       "      <td>371.293518</td>\n",
+       "      <td>49.402992</td>\n",
+       "      <td>261.440002</td>\n",
+       "      <td>192.556659</td>\n",
+       "      <td>154.779999</td>\n",
+       "      <td>142.806898</td>\n",
+       "      <td>...</td>\n",
+       "      <td>370.916334</td>\n",
+       "      <td>49.496967</td>\n",
+       "      <td>258.350006</td>\n",
+       "      <td>48087700</td>\n",
+       "      <td>31434700.0</td>\n",
+       "      <td>17288400.0</td>\n",
+       "      <td>13207900.0</td>\n",
+       "      <td>14905400.0</td>\n",
+       "      <td>233648000.0</td>\n",
+       "      <td>106494400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-28</th>\n",
+       "      <td>192.636261</td>\n",
+       "      <td>153.380005</td>\n",
+       "      <td>140.774185</td>\n",
+       "      <td>356.956451</td>\n",
+       "      <td>372.494537</td>\n",
+       "      <td>49.507965</td>\n",
+       "      <td>253.179993</td>\n",
+       "      <td>193.710998</td>\n",
+       "      <td>154.080002</td>\n",
+       "      <td>141.760646</td>\n",
+       "      <td>...</td>\n",
+       "      <td>372.583866</td>\n",
+       "      <td>49.628933</td>\n",
+       "      <td>263.660004</td>\n",
+       "      <td>34049900</td>\n",
+       "      <td>27057000.0</td>\n",
+       "      <td>12192500.0</td>\n",
+       "      <td>11798800.0</td>\n",
+       "      <td>14327000.0</td>\n",
+       "      <td>246587000.0</td>\n",
+       "      <td>113619900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-29</th>\n",
+       "      <td>191.591385</td>\n",
+       "      <td>151.940002</td>\n",
+       "      <td>140.425446</td>\n",
+       "      <td>352.613037</td>\n",
+       "      <td>373.248901</td>\n",
+       "      <td>49.507965</td>\n",
+       "      <td>248.479996</td>\n",
+       "      <td>193.452263</td>\n",
+       "      <td>153.889999</td>\n",
+       "      <td>140.928642</td>\n",
+       "      <td>...</td>\n",
+       "      <td>373.209190</td>\n",
+       "      <td>49.798883</td>\n",
+       "      <td>255.100006</td>\n",
+       "      <td>42628800</td>\n",
+       "      <td>39789000.0</td>\n",
+       "      <td>14872700.0</td>\n",
+       "      <td>14980500.0</td>\n",
+       "      <td>18723000.0</td>\n",
+       "      <td>389293000.0</td>\n",
+       "      <td>100615300.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10853 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price            Close                                                  \\\n",
+       "Ticker            AAPL        AMZN        GOOG        META        MSFT   \n",
+       "Date                                                                     \n",
+       "1980-12-12    0.098834         NaN         NaN         NaN         NaN   \n",
+       "1980-12-15    0.093678         NaN         NaN         NaN         NaN   \n",
+       "1980-12-16    0.086802         NaN         NaN         NaN         NaN   \n",
+       "1980-12-17    0.088951         NaN         NaN         NaN         NaN   \n",
+       "1980-12-18    0.091530         NaN         NaN         NaN         NaN   \n",
+       "...                ...         ...         ...         ...         ...   \n",
+       "2023-12-22  192.656189  153.419998  142.209045  352.045197  371.799683   \n",
+       "2023-12-26  192.108841  153.410004  142.308670  353.479736  371.879120   \n",
+       "2023-12-27  192.208359  153.339996  140.933624  356.468323  371.293518   \n",
+       "2023-12-28  192.636261  153.380005  140.774185  356.956451  372.494537   \n",
+       "2023-12-29  191.591385  151.940002  140.425446  352.613037  373.248901   \n",
+       "\n",
+       "Price                                    High                          ...  \\\n",
+       "Ticker           NVDA        TSLA        AAPL        AMZN        GOOG  ...   \n",
+       "Date                                                                   ...   \n",
+       "1980-12-12        NaN         NaN    0.099264         NaN         NaN  ...   \n",
+       "1980-12-15        NaN         NaN    0.094108         NaN         NaN  ...   \n",
+       "1980-12-16        NaN         NaN    0.087232         NaN         NaN  ...   \n",
+       "1980-12-17        NaN         NaN    0.089381         NaN         NaN  ...   \n",
+       "1980-12-18        NaN         NaN    0.091959         NaN         NaN  ...   \n",
+       "...               ...         ...         ...         ...         ...  ...   \n",
+       "2023-12-22  48.816162  252.539993  194.457363  154.350006  142.737147  ...   \n",
+       "2023-12-26  49.265030  256.609985  192.944742  153.979996  143.429642  ...   \n",
+       "2023-12-27  49.402992  261.440002  192.556659  154.779999  142.806898  ...   \n",
+       "2023-12-28  49.507965  253.179993  193.710998  154.080002  141.760646  ...   \n",
+       "2023-12-29  49.507965  248.479996  193.452263  153.889999  140.928642  ...   \n",
+       "\n",
+       "Price             Open                            Volume              \\\n",
+       "Ticker            MSFT       NVDA        TSLA       AAPL        AMZN   \n",
+       "Date                                                                   \n",
+       "1980-12-12         NaN        NaN         NaN  469033600         NaN   \n",
+       "1980-12-15         NaN        NaN         NaN  175884800         NaN   \n",
+       "1980-12-16         NaN        NaN         NaN  105728000         NaN   \n",
+       "1980-12-17         NaN        NaN         NaN   86441600         NaN   \n",
+       "1980-12-18         NaN        NaN         NaN   73449600         NaN   \n",
+       "...                ...        ...         ...        ...         ...   \n",
+       "2023-12-22  370.906369  49.181057  256.760010   37122800  29480100.0   \n",
+       "2023-12-26  372.216593  48.954117  254.490005   28919300  25067200.0   \n",
+       "2023-12-27  370.916334  49.496967  258.350006   48087700  31434700.0   \n",
+       "2023-12-28  372.583866  49.628933  263.660004   34049900  27057000.0   \n",
+       "2023-12-29  373.209190  49.798883  255.100006   42628800  39789000.0   \n",
+       "\n",
+       "Price                                                                     \n",
+       "Ticker            GOOG        META        MSFT         NVDA         TSLA  \n",
+       "Date                                                                      \n",
+       "1980-12-12         NaN         NaN         NaN          NaN          NaN  \n",
+       "1980-12-15         NaN         NaN         NaN          NaN          NaN  \n",
+       "1980-12-16         NaN         NaN         NaN          NaN          NaN  \n",
+       "1980-12-17         NaN         NaN         NaN          NaN          NaN  \n",
+       "1980-12-18         NaN         NaN         NaN          NaN          NaN  \n",
+       "...                ...         ...         ...          ...          ...  \n",
+       "2023-12-22  18494700.0  11764200.0  17091100.0  252507000.0   93249800.0  \n",
+       "2023-12-26  11170100.0   9898600.0  12673100.0  244200000.0   86892400.0  \n",
+       "2023-12-27  17288400.0  13207900.0  14905400.0  233648000.0  106494400.0  \n",
+       "2023-12-28  12192500.0  11798800.0  14327000.0  246587000.0  113619900.0  \n",
+       "2023-12-29  14872700.0  14980500.0  18723000.0  389293000.0  100615300.0  \n",
+       "\n",
+       "[10853 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to CSV\n",
+    "data.to_csv(\"stock_data.csv\")\n",
+    "print(\"Data downloaded and saved as stock_data.csv\")"
    ]
   },
   {
@@ -1106,7 +1582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Myenv",
    "language": "python",
    "name": "python3"
   },
