--- a/notebooks/text_analysis.ipynb
+++ b/notebooks/text_analysis.ipynb
@@ -20,7 +20,7 @@
     "import sys \n",
     "import yfinance as yf\n",
     "sys.path.insert(0, '/10 A KAI 2/week 1/Stock_Price_Analysis/')\n",
-    "## new stock price downloaded "
+    "## new stock price download"
    ]
   },
   {
@@ -1582,7 +1582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Myenv",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
